--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
         "google/apiclient": "^2.18",
-        "vlucas/phpdotenv": "^5.6",
+        "vlucas/phpdotenv": "5.4",
         "openai-php/client": "^0.10.3"
     },
     "config": {
