--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
         "allow-plugins": {
             "php-http/discovery": true
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.5"
     }
 }
